# orion

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  app.py  docker-compose.yaml  orion.code-workspace  pnpm-lock.yaml  pyproject.toml  requirements.txt
client/: .eslintrc  .prettierrc  hrm.dev.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
client/pages/: _document.html  article.html  explore.html  ground-track.html  home.html  pontos-lagrange.html  pousolunar.html  transferencia-orbital.html  twolines.html
client/pages/includes/layouts/: article.html  explore.html  ground-track.html  home.html  pontos-lagrange.html  pousolunar.html  transferencia-orbital.html  twolines.html
client/pages/includes/modules/: context.html  metatags.html  sidebar.html
client/src/scripts/components/: Alert.vue  Footer.vue  Modal.vue  Sidebar.vue  UserModal.vue  index.js  menuDrawer.vue
client/src/scripts/helpers/: addModule.js  checkFilters.js  formatDate.js  getLastEndpoint.js  getTailwindColor.js  hasElement.js  index.js  mock.js  registerFilters.js  toggleClass.js
client/src/scripts/hooks/: useMeasure.js
client/src/scripts/modules/: CardsLunar.vue  LineChart.vue  LineChartGT.vue  TableCards.vue
client/src/scripts/store/: index.js  page.js
client/src/styles/: global.scss
client/src/styles/components/: _index.scss  _modal.scss  _sidebar.scss
client/src/styles/generic/: _helpers.scss  _index.scss
client/src/styles/modules/: _footers.scss  _headers.scss  _index.scss  _modal.scss  _sidebar.scss
client/src/styles/pages/: _index.scss  _not-found.scss
client/src/styles/settings/: _tokens.scss
client/src/styles/tailwind/: common.js
client/src/styles/tools/: _sizes.scss
docker/: app.dockerfile
scripts/: poetry.py
server/: config.py  web.py  worker.py
server/commands/: config_command.py
server/controllers/: article_controller.py  explore_controller.py  home_controller.py  pouso_lunar_controller.py
server/core/base_model/: __init__.py
server/core/base_model/decorators/: __init__.py  validator.py
server/core/base_model/exceptions/: __init__.py  (+1 more)
server/core/celery/: __init__.py  celery.py
server/core/context/: __init__.py  context.py
server/core/exceptions/: __init__.py  exceptions.py
server/core/flask/: __init__.py  flask.py
server/core/logging/: __init__.py  logging.py  sns_critical_handler.py
server/core/utils/: redis_utils.py  strings.py  utils.py
server/decorators/: __init__.py  context_decorator.py  templated_decorator.py  timed_cache_decorator.py
server/enums/: ambiente_enum.py
server/registers/: commands.py  routes.py  scheduler.py  tasks.py
server/resources/: admin_resources.py  app_resource.py  lagrange_resource.py  pouso_lunar_resource.py
server/services/: lagrange.py  manobras_orbitais.py  pontos_lagrange.py  posicionamento_satelite.py  pouso_lunar.py
server/services/admin_service/: article_service.py  menu_service.py
server/services/celestrak_service/: celestrak_service.py
server/tasks/: healthcheck_task.py
(+28 files in other folders)
